# Projeto-Ciencia-de-Dados2

./: .env  .env.example  .gitignore  app_streamlit.py  criar_banco.sql  database.py  main.py  models.py  pyproject.toml  schemas.py  webScrapper.py
