[project]
name = "dfimoveis"
version = "0.1.0"
description = "Módulo DFImóveis - API + Banco de Dados + Frontend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.129.0",
    "pymysql>=1.1.2",
    "requests>=2.32.5",
    "selenium>=4.41.0",
    "setuptools>=82.0.1",
    "sqlalchemy>=2.0.46",
    "undetected-chromedriver>=3.5.5",
    "uvicorn>=0.41.0",
    "streamlit>=1.40.0",
    "pandas>=2.2.0",
    "plotly>=5.24.0",
    "python-dotenv>=1.0.0",
    "webdriver-manager>=4.0.2",
]


